[gd_scene load_steps=29 format=3 uid="uid://jmotblnxfv53"]

[ext_resource type="Script" path="res://Enemies/blue_demon.gd" id="1_uo4wj"]
[ext_resource type="Texture2D" uid="uid://chgb0cngef7x5" path="res://assets/Enemies/Enemy02/attack01.png" id="2_w5apm"]
[ext_resource type="Texture2D" uid="uid://daoag122ocuuf" path="res://assets/Enemies/Enemy02/attack02.png" id="3_0ia1e"]
[ext_resource type="Texture2D" uid="uid://tm8ekx57bnna" path="res://assets/Enemies/Enemy02/attack03.png" id="4_4pfbv"]
[ext_resource type="Texture2D" uid="uid://c8cf0k7ichn7s" path="res://assets/Enemies/Enemy02/attack04.png" id="5_pyqms"]
[ext_resource type="Texture2D" uid="uid://cj4jc7lh5a0bo" path="res://assets/Enemies/Enemy02/attack05.png" id="6_4sjxa"]
[ext_resource type="Texture2D" uid="uid://bn6okh74e3y42" path="res://assets/Enemies/Enemy02/attack06.png" id="7_d3uya"]
[ext_resource type="Texture2D" uid="uid://b8smm7fw1xhcb" path="res://assets/Enemies/Enemy02/attack07.png" id="8_r27m0"]
[ext_resource type="Texture2D" uid="uid://crbltnac0v78m" path="res://assets/Enemies/Enemy02/attack08.png" id="9_pk6g1"]
[ext_resource type="Texture2D" uid="uid://cgrsjyt4a1nov" path="res://assets/Enemies/Enemy02/hit01.png" id="10_a55ab"]
[ext_resource type="Texture2D" uid="uid://bulv7sdotk8f" path="res://assets/Enemies/Enemy02/hit02.png" id="11_vphj6"]
[ext_resource type="Texture2D" uid="uid://c8g8u12dhtd20" path="res://assets/Enemies/Enemy02/hit03.png" id="12_hvqm1"]
[ext_resource type="Texture2D" uid="uid://c3o0k88x1n73i" path="res://assets/Enemies/Enemy02/idle01.png" id="13_ip43r"]
[ext_resource type="Texture2D" uid="uid://77if25hq3wrt" path="res://assets/Enemies/Enemy02/idle02.png" id="14_2x1dp"]
[ext_resource type="Texture2D" uid="uid://ndb6uexpw67m" path="res://assets/Enemies/Enemy02/idle03.png" id="15_qwdjo"]
[ext_resource type="Texture2D" uid="uid://j6l4yskvt1k3" path="res://assets/Enemies/Enemy02/idle04.png" id="16_515gv"]
[ext_resource type="Texture2D" uid="uid://dve648gymrc1m" path="res://assets/Enemies/Enemy02/idle05.png" id="17_3dg25"]
[ext_resource type="Texture2D" uid="uid://ce4dx4t11srqu" path="res://assets/Enemies/Enemy02/idle06.png" id="18_ed741"]
[ext_resource type="FontFile" uid="uid://ddnh6ut2nctfr" path="res://assets/Fonts/Peaberry-Base.otf" id="18_i3mfb"]
[ext_resource type="Texture2D" uid="uid://c0ttoj51egbo" path="res://assets/Enemies/Enemy02/idle07.png" id="19_6yw8r"]
[ext_resource type="Texture2D" uid="uid://dhlt64nfq7mbm" path="res://assets/Enemies/Enemy02/idle08.png" id="20_ttbh8"]
[ext_resource type="Texture2D" uid="uid://bkwtqtxl77mar" path="res://assets/Enemies/Enemy02/idle09.png" id="21_egfch"]
[ext_resource type="Texture2D" uid="uid://bc1y0rd6rnj1s" path="res://assets/Enemies/Enemy02/idle10.png" id="22_pgrcd"]
[ext_resource type="Texture2D" uid="uid://dqaa6jy53320n" path="res://assets/Enemies/Enemy02/idle11.png" id="23_po0sd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hbc73"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_w5apm")
}, {
"duration": 1.0,
"texture": ExtResource("3_0ia1e")
}, {
"duration": 1.0,
"texture": ExtResource("4_4pfbv")
}, {
"duration": 1.0,
"texture": ExtResource("5_pyqms")
}, {
"duration": 1.0,
"texture": ExtResource("6_4sjxa")
}, {
"duration": 1.0,
"texture": ExtResource("7_d3uya")
}, {
"duration": 1.0,
"texture": ExtResource("8_r27m0")
}, {
"duration": 1.0,
"texture": ExtResource("9_pk6g1")
}],
"loop": false,
"name": &"Attack",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_a55ab")
}, {
"duration": 1.0,
"texture": ExtResource("11_vphj6")
}, {
"duration": 1.0,
"texture": ExtResource("12_hvqm1")
}],
"loop": false,
"name": &"Die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_a55ab")
}, {
"duration": 1.0,
"texture": ExtResource("11_vphj6")
}, {
"duration": 1.0,
"texture": ExtResource("12_hvqm1")
}],
"loop": false,
"name": &"Hurt",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_ip43r")
}, {
"duration": 1.0,
"texture": ExtResource("14_2x1dp")
}, {
"duration": 1.0,
"texture": ExtResource("15_qwdjo")
}, {
"duration": 1.0,
"texture": ExtResource("16_515gv")
}, {
"duration": 1.0,
"texture": ExtResource("17_3dg25")
}, {
"duration": 1.0,
"texture": ExtResource("18_ed741")
}, {
"duration": 1.0,
"texture": ExtResource("19_6yw8r")
}, {
"duration": 1.0,
"texture": ExtResource("20_ttbh8")
}, {
"duration": 1.0,
"texture": ExtResource("21_egfch")
}, {
"duration": 1.0,
"texture": ExtResource("22_pgrcd")
}, {
"duration": 1.0,
"texture": ExtResource("23_po0sd")
}],
"loop": true,
"name": &"Idle",
"speed": 11.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mwnm4"]
radius = 8.0
height = 34.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dnvxl"]
size = Vector2(24, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_yc3is"]
radius = 259.031

[node name="BlueDemon" type="CharacterBody2D"]
script = ExtResource("1_uo4wj")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hbc73")
animation = &"Attack"
autoplay = "Idle"

[node name="HurtBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mwnm4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(12, -1)
shape = SubResource("RectangleShape2D_dnvxl")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_yc3is")
debug_color = Color(0.0705882, 0.0196078, 0.419608, 1)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -19.0
offset_top = -17.0
offset_right = 107.0
offset_bottom = 10.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("18_i3mfb")
value = 50.0

[connection signal="animation_changed" from="Sprite2D" to="." method="_on_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
